diane-kpis-service/diane-kpis-ws/kubernetes/service-beta.yaml
kind: Service
apiVersion: v1
metadata:
  name: diane-kpis-beta
  namespace: web-service-beta
spec:
  ports:
    - port: 8080
      name: public
  selector:
    app: diane-kpis-beta
