diane-kpis-service/diane-kpis-ws/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: diane-kpis
  namespace: web-service
spec:
  ports:
    - port: 8080
      name: public
  selector:
    app: diane-kpis
